tests/invalid/trait/impl_method_missing.facet
trait Runner {
  fn run(self: &mut Self) -> ();
}

struct Job {
  value: unrestricted isize
}

impl Runner for unrestricted Job {}

fn main() -> unrestricted () {
  ()
}
